rusqlite/libsqlite3-sys/src/bindgen.rs

    pub fn sqlite3_prepare16(db: *mut sqlite3,
                             zSql: *const ::std::os::raw::c_void,
                             nByte: ::std::os::raw::c_int,
                             ppStmt: *mut *mut sqlite3_stmt,
                             pzTail: *mut *const ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_prepare16_v2(db: *mut sqlite3,
                                zSql: *const ::std::os::raw::c_void,
                                nByte: ::std::os::raw::c_int,
                                ppStmt: *mut *mut sqlite3_stmt,
                                pzTail: *mut *const ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_sql(pStmt: *mut sqlite3_stmt)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_stmt_readonly(pStmt: *mut sqlite3_stmt)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_stmt_busy(arg1: *mut sqlite3_stmt)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_blob(arg1: *mut sqlite3_stmt,
                             arg2: ::std::os::raw::c_int,
                             arg3: *const ::std::os::raw::c_void,
                             n: ::std::os::raw::c_int,
                             arg4:
                                 ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                *mut ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_blob64(arg1: *mut sqlite3_stmt,
                               arg2: ::std::os::raw::c_int,
                               arg3: *const ::std::os::raw::c_void,
                               arg4: sqlite3_uint64,
                               arg5:
                                   ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                  *mut ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_double(arg1: *mut sqlite3_stmt,
                               arg2: ::std::os::raw::c_int, arg3: f64)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_int(arg1: *mut sqlite3_stmt,
                            arg2: ::std::os::raw::c_int,
                            arg3: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_int64(arg1: *mut sqlite3_stmt,
                              arg2: ::std::os::raw::c_int,
                              arg3: sqlite3_int64) -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_null(arg1: *mut sqlite3_stmt,
                             arg2: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_text(arg1: *mut sqlite3_stmt,
                             arg2: ::std::os::raw::c_int,
                             arg3: *const ::std::os::raw::c_char,
                             arg4: ::std::os::raw::c_int,
                             arg5:
                                 ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                *mut ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_text16(arg1: *mut sqlite3_stmt,
                               arg2: ::std::os::raw::c_int,
                               arg3: *const ::std::os::raw::c_void,
                               arg4: ::std::os::raw::c_int,
                               arg5:
                                   ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                  *mut ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_text64(arg1: *mut sqlite3_stmt,
                               arg2: ::std::os::raw::c_int,
                               arg3: *const ::std::os::raw::c_char,
                               arg4: sqlite3_uint64,
                               arg5:
                                   ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                  *mut ::std::os::raw::c_void)>,
                               encoding: ::std::os::raw::c_uchar)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_value(arg1: *mut sqlite3_stmt,
                              arg2: ::std::os::raw::c_int,
                              arg3: *const sqlite3_value)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_zeroblob(arg1: *mut sqlite3_stmt,
                                 arg2: ::std::os::raw::c_int,
                                 n: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_zeroblob64(arg1: *mut sqlite3_stmt,
                                   arg2: ::std::os::raw::c_int,
                                   arg3: sqlite3_uint64)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_parameter_count(arg1: *mut sqlite3_stmt)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_bind_parameter_name(arg1: *mut sqlite3_stmt,
                                       arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_bind_parameter_index(arg1: *mut sqlite3_stmt,
                                        zName: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_clear_bindings(arg1: *mut sqlite3_stmt)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_column_count(pStmt: *mut sqlite3_stmt)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_column_name(arg1: *mut sqlite3_stmt,
                               N: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_column_name16(arg1: *mut sqlite3_stmt,
                                 N: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_column_database_name(arg1: *mut sqlite3_stmt,
                                        arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_column_database_name16(arg1: *mut sqlite3_stmt,
                                          arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_column_table_name(arg1: *mut sqlite3_stmt,
                                     arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_column_table_name16(arg1: *mut sqlite3_stmt,
                                       arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_column_origin_name(arg1: *mut sqlite3_stmt,
                                      arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_column_origin_name16(arg1: *mut sqlite3_stmt,
                                        arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_column_decltype(arg1: *mut sqlite3_stmt,
                                   arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_column_decltype16(arg1: *mut sqlite3_stmt,
                                     arg2: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_step(arg1: *mut sqlite3_stmt) -> ::std::os::raw::c_int;
    pub fn sqlite3_data_count(pStmt: *mut sqlite3_stmt)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_column_blob(arg1: *mut sqlite3_stmt,
                               iCol: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_column_bytes(arg1: *mut sqlite3_stmt,
                                iCol: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_column_bytes16(arg1: *mut sqlite3_stmt,
                                  iCol: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_column_double(arg1: *mut sqlite3_stmt,
                                 iCol: ::std::os::raw::c_int) -> f64;
    pub fn sqlite3_column_int(arg1: *mut sqlite3_stmt,
                              iCol: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_column_int64(arg1: *mut sqlite3_stmt,
                                iCol: ::std::os::raw::c_int) -> sqlite3_int64;
    pub fn sqlite3_column_text(arg1: *mut sqlite3_stmt,
                               iCol: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_uchar;
    pub fn sqlite3_column_text16(arg1: *mut sqlite3_stmt,
                                 iCol: ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_column_type(arg1: *mut sqlite3_stmt,
                               iCol: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_column_value(arg1: *mut sqlite3_stmt,
                                iCol: ::std::os::raw::c_int)
     -> *mut sqlite3_value;
    pub fn sqlite3_finalize(pStmt: *mut sqlite3_stmt)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_reset(pStmt: *mut sqlite3_stmt) -> ::std::os::raw::c_int;
    pub fn sqlite3_create_function(db: *mut sqlite3,
                                   zFunctionName:
                                       *const ::std::os::raw::c_char,
                                   nArg: ::std::os::raw::c_int,
                                   eTextRep: ::std::os::raw::c_int,
                                   pApp: *mut ::std::os::raw::c_void,
                                   xFunc:
                                       ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                      *mut sqlite3_context,
                                                                                  arg2:
                                                                                      ::std::os::raw::c_int,
                                                                                  arg3:
                                                                                      *mut *mut sqlite3_value)>,
                                   xStep:
                                       ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                      *mut sqlite3_context,
                                                                                  arg2:
                                                                                      ::std::os::raw::c_int,
                                                                                  arg3:
                                                                                      *mut *mut sqlite3_value)>,
                                   xFinal:
                                       ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                      *mut sqlite3_context)>)
     -> ::std::os::raw::c_int;
